# Spacies

./: README.md
server/: Cargo.toml  dump.rdb
server/migrations/2020-11-17-101814_add_user/: up.sql
server/migrations/2020-11-20-124024_add_space/: down.sql  up.sql
server/migrations/2020-11-21-092548_add_space_update/: up.sql
server/migrations/2020-11-24-082327_add_space_channl/: up.sql
server/migrations/2020-11-30-144130_mail_folder/: up.sql
server/migrations/2020-11-30-144304_mail_user/: up.sql
server/migrations/2020-12-01-110259_mail_user/: up.sql
server/migrations/2020-12-03-135020_asset_mgt/: up.sql
server/migrations/2020-12-04-092825_asset_content/: up.sql
server/migrations/2020-12-07-093503_add_events/: up.sql
server/migrations/2020-12-09-113025_add_task_mgt/: up.sql
server/migrations/2020-12-11-102328_update_task/: up.sql
server/migrations/2020-12-16-123004_chat/: up.sql
server/migrations/2020-12-19-081543_channel_user/: up.sql
server/migrations/2021-01-27-110831_new_setup/: up.sql
server/migrations/2021-02-13-092834_add_mail_token/: up.sql
server/migrations/2021-02-13-095606_add_mail_token/: up.sql
server/migrations/2021-02-13-150104_add_mail_token/: up.sql
server/migrations/2021-04-18-085318_user_chat/: up.sql
server/migrations/2021-04-19-154323_channel_thread/: up.sql
server/migrations/2021-04-21-085603_unread_channel_chat/: up.sql
server/migrations/2021-04-21-085726_unread_user_chat/: up.sql
server/pages/: invite.html  jwt_user_error.html  welcome.html
server/src/: main.rs  schema.rs
server/src/auth/: mod.rs
(+49 files in other folders)
