[package]
name = "server"
version = "0.1.0"
authors = ["valentine-mario <valentine13400@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-web-httpauth = "0.5.0"
chrono = { version = "0.4.10", features = ["serde"] }
derive_more = "0.99.2"
diesel = { version = "1.4.2", features = ["postgres","uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
futures = "0.3.1"
r2d2 = "0.8.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
actix-service = "1.0.1"
bcrypt = "0.8"
reqwest = "0.9.22"
listenfd = "0.3"
actix-cors="0.5.1"
jsonwebtoken="7"
validator = { version = "0.11", features = ["derive"] }
json = "0.12"
bytes = "0.5.6"
sanitize-filename = "0.2"
actix-multipart = "0.3"
rust-s3 = "0.26.3"
pusher="0.4.1"
actix-files = "0.3"
lettre_email = "0.9.4"
lettre = "0.9"